// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Header CITZ Login Loading 1`] = `
.c1 {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 999;
  left: 0;
  background-color: rgba(0,0,0,0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  height: calc(100vh - undefined - undefined);
  background-image: url("/tenants/CITZ/background-image.png");
  background-size: cover;
  background-position: center top;
  overflow: auto;
}

.c0 .unauth {
  font-size: 24px;
  margin: 91px auto;
  background-color: rgba(250,250,250,0.9);
  padding-top: 15px;
  padding-bottom: 20px;
  max-width: 750px;
  border-radius: 4px;
}

.c0 .unauth .sign-in {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .unauth .block {
  padding: 20px 0;
  max-width: 650px;
  max-height: 475px;
  text-align: center;
  border-radius: 4px;
  min-width: 90%;
}

.c0 .unauth h1 {
  padding-bottom: 18px;
  font-family: 'BCSans',Fallback,sans-serif;
  font-weight: 700;
  font-size: 24px;
  font-style: italic;
}

.c0 .unauth h6 {
  margin-bottom: 20px;
}

.c0 .unauth p {
  font-size: 12px;
  font-family: 'BCSans',Fallback,sans-serif;
  line-height: 130%;
  margin-left: 30px;
  margin-right: 30px;
  margin-bottom: 2px;
}

.c0 .unauth .btn {
  margin-top: 30px;
  margin-bottom: 30px;
}

.c0 .unauth .btn-link {
  margin-left: 30px;
  margin-top: 10px;
  font-size: 12px;
}

.c0 .unauth .btn-link:focus,
.c0 .unauth .btn-link:active {
  background: none !important;
}

.c0 .unauth .bceid {
  margin-bottom: -30px;
}

.c0 .unauth .jumbotron {
  background-color: white;
  padding: 20px;
  margin-left: 40px;
  margin-right: 40px;
  width: 90%;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  border: 1px;
  border-style: solid;
  border-color: #707070;
  text-align: left;
}

.c0 .unauth .jumbotron p {
  margin: 10px;
}

.c0 .unauth .blockText {
  margin: 0 auto 38px auto;
}

.c0 .unauth .or {
  margin: 20px auto;
}

.c0 .unauth .border-dark {
  border-color: !important;
  color: !important;
}

.c0 .unauth .pims-logo {
  margin-left: -300px;
  margin-bottom: 10px;
}

<div
  class="c0 login container-fluid"
>
  <div
    class="c1"
  >
    <div
      class="spinner-border text-warning"
      data-testid="filter-backdrop-loading"
    />
  </div>
  <div
    class="unauth container-fluid"
  >
    <img
      alt="PIMS logo"
      class="pims-logo"
      src="/tenants/CITZ/logo_with_text.png"
    />
    <div
      class="sign-in row"
    >
      <div
        class="col-md-3 col-1"
      />
      <div
        class="block col-md-6 col-16"
      >
        <h1>
          Search and visualize government property information
        </h1>
        <h6>
          PIMS enables you to search properties owned by the Government of British Columbia
        </h6>
        <p>
          The data provided can assist your agency in making informed, timely, and strategic decisions on the optimal use of real property assets on behalf of the people and priorities of British Columbia.
        </p>
        <button
          class="btn btn-primary"
          disabled=""
          type="button"
        >
          Sign In
        </button>
        <p>
          Sign into PIMS with your government issued IDIR or with your Business BCeID.
        </p>
        <div
          class="row"
        />
      </div>
      <div
        class="col-md-3 col-1"
      />
    </div>
  </div>
</div>
`;

exports[`Empty Header MOTI Login Loading 1`] = `
.c1 {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 999;
  left: 0;
  background-color: rgba(0,0,0,0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  height: calc(100vh - undefined - undefined);
  background-image: url("/tenants/MOTI/background-image.jpg");
  background-size: cover;
  background-position: center top;
  overflow: auto;
}

.c0 .unauth {
  font-size: 24px;
  margin: 91px auto;
  background-color: rgba(250,250,250,0.9);
  padding-top: 15px;
  padding-bottom: 20px;
  max-width: 750px;
  border-radius: 4px;
}

.c0 .unauth .sign-in {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .unauth .block {
  padding: 20px 0;
  max-width: 650px;
  max-height: 475px;
  text-align: center;
  border-radius: 4px;
  min-width: 90%;
}

.c0 .unauth h1 {
  padding-bottom: 18px;
  font-family: 'BCSans',Fallback,sans-serif;
  font-weight: 700;
  font-size: 24px;
  font-style: italic;
}

.c0 .unauth h6 {
  margin-bottom: 20px;
}

.c0 .unauth p {
  font-size: 12px;
  font-family: 'BCSans',Fallback,sans-serif;
  line-height: 130%;
  margin-left: 30px;
  margin-right: 30px;
  margin-bottom: 2px;
}

.c0 .unauth .btn {
  margin-top: 30px;
  margin-bottom: 30px;
}

.c0 .unauth .btn-link {
  margin-left: 30px;
  margin-top: 10px;
  font-size: 12px;
}

.c0 .unauth .btn-link:focus,
.c0 .unauth .btn-link:active {
  background: none !important;
}

.c0 .unauth .bceid {
  margin-bottom: -30px;
}

.c0 .unauth .jumbotron {
  background-color: white;
  padding: 20px;
  margin-left: 40px;
  margin-right: 40px;
  width: 90%;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  border: 1px;
  border-style: solid;
  border-color: #707070;
  text-align: left;
}

.c0 .unauth .jumbotron p {
  margin: 10px;
}

.c0 .unauth .blockText {
  margin: 0 auto 38px auto;
}

.c0 .unauth .or {
  margin: 20px auto;
}

.c0 .unauth .border-dark {
  border-color: !important;
  color: !important;
}

.c0 .unauth .pims-logo {
  margin-left: -300px;
  margin-bottom: 10px;
}

<div
  class="c0 login container-fluid"
>
  <div
    class="c1"
  >
    <div
      class="spinner-border text-warning"
      data-testid="filter-backdrop-loading"
    />
  </div>
  <div
    class="unauth container-fluid"
  >
    <img
      alt="PIMS logo"
      class="pims-logo"
      src="/tenants/MOTI/PIMS-logo-with-text.png"
    />
    <div
      class="sign-in row"
    >
      <div
        class="col-md-3 col-1"
      />
      <div
        class="block col-md-6 col-16"
      >
        <h1>
          TRAN Property Information Management System (PIMS)
        </h1>
        <h6>
          PIMS enables you to view highways and properties owned by the Ministry of Transportation and Infrastructure
        </h6>
        <p>
          WARNING: Not all data included within has been vetted for accuracy and completeness. Please use caution when proceeding and confirm data before relying on it.
        </p>
        <button
          class="btn btn-primary"
          disabled=""
          type="button"
        >
          Sign In
        </button>
        <p>
          Sign into PIMS with your government issued IDIR or with your Business BCeID.
        </p>
        <div
          class="row"
        />
      </div>
      <div
        class="col-md-3 col-1"
      />
    </div>
  </div>
</div>
`;
